Findbugs addressed, added name.